@@ -40,6 +40,7 @@ class MetadataWorker: public virtual WorkerBase
 			const cachefiles::IndexEntry&, const string&, const string&, bool);
 	bool __update_index(download::Manager&, const cachefiles::IndexEntry&,
 			IndexUpdateInfo&&, bool, bool&);
+	void __generate_index_of_index(const string&);
 	bool __update_main_index(download::Manager&, const cachefiles::IndexEntry&,
 			bool releaseFileChanged, bool& indexFileChanged);
 	void __update_translations(download::Manager& downloadManager,
